made  the toggle text to change depending on the mode in

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="toggle">
-        <p>Dark Mode</p>
+        <p class="toggle-text">Dark Mode</p>
         <div class="toggle-case">
           <div class="toggle-button"></div>
         </div>
